# PulseWave

./: .gitignore  CMakeLists.txt  DESIGN_REFERENCES.md  README.md  REVERSE_ENGINEERING.md  blueprint.txt  pulsewave_11_cli.py  pyproject.toml  requirements.txt
assets/: ascii_logo.txt
building-scripts/: README.md  linux-install.sh  manage.py  windows-install.ps1
native/audio/: audio_engine.cpp  audio_engine.h  decoder.cpp  decoder.h
native/bindings/: pulsewave-11.pyx  pulsewave.pyx  setup.py
native/dsp/: fft.cpp  fft.h  visualizer.cpp  visualizer.h
pulsewave/: __init__.py  __main__.py  cli.py
pulsewave-11/: __init__.py  app.py  cli.py
pulsewave-11/controllers/: __init__.py  command_controller.py  input_controller.py  library_settings_controller.py  playback_runtime_controller.py
pulsewave-11/core/: __init__.py  config.py  library.py  player.py  search.py  state.py
pulsewave-11/integrations/: __init__.py  lan_stream.py  local_scan.py  ytmusic.py
pulsewave-11/services/: metadata.py  metrics.py  plugins.py  scripting.py  snapshots.py
pulsewave-11/ui/: __init__.py  components.py  keybinds.py  renderer.py  themes.py  (+1 more)
tests/: test_advanced_features.py  test_alias_and_events.py  test_app_settings.py  test_cli_commands.py  test_config_defaults.py  test_config_paths.py  test_input_dispatch.py  test_keybind_chains.py  test_library_store.py  test_queue.py  test_renderer_layout.py  test_runtime_resize.py  test_themes.py  test_visualizer.py
themes/: amber.yaml  black_white.yaml  default.yaml  graphite.yaml  green.yaml  ice.yaml  neon_city.yaml  sunset_tape.yaml
(+23 files in other folders)
