[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsewave-11"
version = "1.0.0"
description = "Minimal retro CLI music player"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
youtube = ["ytmusicapi>=1.8.0", "yt-dlp>=2023.12.30"]
mpv = ["python-mpv>=1.0.8"]
native = ["cython>=3.0.0"]
build = ["nuitka>=2.6.0"]

[project.scripts]
pulsewave-11 = "pulsewave_11_cli:main"

[tool.setuptools]
py-modules = ["pulsewave_11_cli"]

[tool.setuptools.packages.find]
include = ["pulsewave-11*"]
